hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch4.php.exp
File "reffiness_mismatch4.php", line 7, characters 7-7:
Class B does not correctly implement all required methods  (Typing[4175])
  File "reffiness_mismatch4.php", line 7, characters 20-20:
  Some methods are incompatible with those declared in type A
Read the following to see why:
  File "reffiness_mismatch4.php", line 8, characters 19-19:
  Member f has the wrong type
  File "reffiness_mismatch4.php", line 4, characters 22-23:
  This parameter is passed by reference
  File "reffiness_mismatch4.php", line 8, characters 21-22:
  It is incompatible with a normal parameter
